Closed
Bug 1111555
Opened 11 years ago
Closed 11 years ago
[e10s] Ongoing download gets canceled in private browsing mode if tab starting the download gets closed
Categories
(Firefox :: Private Browsing, defect)
Tracking
()
VERIFIED
FIXED
Firefox 41
People
(Reporter: aryx, Assigned: mrbkap)
References
Details
(Whiteboard: [testday-20150821])
Attachments
(1 file)
|
1.21 KB,
patch
|
ehsan.akhgari
:
review+
|
Details | Diff | Splinter Review |
Firefox Nightly 37.0a1 20141214030205 on Windows 8.1
Ongoing downloads gets canceled in private browsing if the tab starting the download gets closed.
My STR:
1. Set Firefox to always start in Private Browsing mode.
2. Go to https://air.mozilla.org/intern-presentations-36/
3. Below the video, click "Download".
4. Right-click "WebM" and "Save as".
5. Pick location and save the file.
6. While the download is still ongoing, open a new tab and close the one with https://air.mozilla.org/intern-presentations-36/
Actual result:
Download gets canceled when closing the tab which started it.
Expected result:
Download continues and is not bound to a tab.
> Download gets canceled when closing the tab which started it.
That's not completely true.
I opened this bug-page in the browser, middleclicked on the URL, AirMozilla is opened in a new tab, and I started the download from there.
Closing the AirMozilla-tab didn't stop the download, but opening a new tab and closing the Bugzilla-tab, from which the AirMozilla-tab was opened, did stop the download.
Updated•11 years ago
|
tracking-e10s:
--- → m7+
Updated•11 years ago
|
Flags: firefox-backlog+
Updated•11 years ago
|
Assignee: nobody → mrbkap
| Assignee | ||
Comment 2•11 years ago
|
||
Ehsan, are you the right reviewer here?
This seems to be a case where we're firing a notification when we shouldn't be. The key is that when privtebrowsing.autostart is true, we probably shouldn't fire last-pb-context-exited.
| Assignee | ||
Updated•11 years ago
|
Attachment #8620737 -
Flags: review?(ehsan)
Updated•11 years ago
|
Attachment #8620737 -
Flags: review?(ehsan) → review+
Comment 4•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
status-firefox41:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 41
Updated•10 years ago
|
QA Whiteboard: [good first verify][verify in Nightly only]
Comment 5•10 years ago
|
||
I have reproduced this bug with Firefox Nightly 37.0a1 (Build ID:20141215030201) on
windows 8.1 pro 64-bit with the instructions from comment 0 .
Verified as fixed with Latest Firefox Nightly 43.0a1 (Build ID:20150822030206)
Mozilla/5.0 (Windows NT 6.3; WOW64; rv:43.0) Gecko/20100101 Firefox/43.0
Whiteboard: [testday-20150821]
Comment 6•10 years ago
|
||
This bug's fix is verified in latest Firefox beta ( 42.0) [testday-20151002]
Comment 7•10 years ago
|
||
(In reply to preethi.dhinesh from comment #6)
> This bug's fix is verified in latest Firefox beta ( 42.0) [testday-20151002]
It is verified as Fixed with latest firefox beta 42.0
Updated•10 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•