Bug 1111555 - Don't accidentally cancel downloads if we think we're exiting private browsing. r=ehsan